# PagerMaid-Modify

./: Dockerfile  Dockerfile.alpine  config.gen.yml  docker-compose.gen.yml  pyproject.toml  requirements.txt
languages/built-in/: en.yml  ja.yml  zh-cn.yml  zh-tw.yml
pagermaid/: __main__.py  config.py  listener.py  version.py
pagermaid/common/: system.py
pagermaid/modules/: plugin.py  status.py  sudo.py  system.py
pagermaid/services/: _bot.py
pagermaid/utils/: _log.py  bot_utils.py  listener.py
pyromod/listen/: listen.py
pyromod/methods/: sign_in_qrcode.py
utils/: docker.sh
